[package]
name = "syndication"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
redb = "2.2"
tantivy = "0.22"
bincode = "1.3"
thiserror = "2.0"
url = "2.5"
directories = "5.0"
anyhow = "1.0"
dotenvy = "0.15"
sha2 = "0.10"
quick-xml = "0.37"
hex = "0.4"
zip = "2.2"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
